✨ feat: 휴보강 이력 조회 API 추가
